--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <h1>Valentin Sinyakin</h1>
       <nav>
         <ul>
-          <li><a href="#Contact">My Contact Info</a><li>
-          <li><a href="#Briefly">Briefly About Myself<a></li>
+          <li><a href="#Contact">My Contact Info</a></li>
+          <li><a href="#Briefly">Briefly About Myself</a></li>
           <li><a href="#video">video work</a></li>
           <li><a href="#Code">Code example</a></li>
           <li><a href="#Courses">Courses</a></li>
@@ -84,15 +84,18 @@
     </div>
     <div class="Code_example">
       <h2 id="Code" class="info-text h1">Code example</h2>
-      
-      <p><code>
-    function checkParent (src, dest) {<Br>
-     while (src != null) {<Br>
-       if (src.tagName == dest) return src<Br>
-        src = src.parentElement<Br>
-     }<Br>
-     return null<Br>
-    }</code></p>
+
+      <p>
+        <code>
+          function checkParent (src, dest) {<br />
+          while (src != null) {<br />
+          if (src.tagName == dest) return src<br />
+          src = src.parentElement<br />
+          }<br />
+          return null<br />
+          }</code
+        >
+      </p>
     </div>
     <div>
       <h2 id="Courses" class="info-text h1">Courses</h2>
@@ -106,30 +109,28 @@
     <div>
       <h2 class="info-text h1">Languages</h2>
       <ol>
-        <li>Russian A1 </li>
+        <li>Russian A1</li>
         <li>English A2</li>
       </ol>
     </div>
     <div class="footer">
-    <footer>
-      <p>2022</p>
-      <img
-        src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
-        alt="github"
-        class="imggit"
-      />
-      <a href="https://github.com/ValentinSinyakin">My github.com</a>
-      <img
-        src="https://rs.school/images/rs_school_js.svg"
-        alt="rs_school"
-        class="imggit"
-        
-      />
-      <a href="https://rs.school/js-stage0/" target="_blank"
-        >«JavaScript/Front-end. Stage 0»
-      </a>
-
-    </footer>
+      <footer>
+        <p>2022</p>
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+          alt="github"
+          class="imggit"
+        />
+        <a href="https://github.com/ValentinSinyakin">My github.com</a>
+        <img
+          src="https://rs.school/images/rs_school_js.svg"
+          alt="rs_school"
+          class="imggit"
+        />
+        <a href="https://rs.school/js-stage0/" target="_blank"
+          >«JavaScript/Front-end. Stage 0»
+        </a>
+      </footer>
     </div>
   </body>
 </html>
